# multithreaded-webserver-c

./: .clang-format  .gitignore  CMakeLists.txt  Makefile.dev  README.md
include/: connection.h  include.h  server.h  threadpool.h
src/: connection.c  main.c  server.c  threadpool.c
test/: concurrency.sh  load.sh
